crates/plotnik-tests/tests/04-emit/bytecode/anchors/recursive_ref_exact_first_child_impossible.txt
Seq = [
  {(identifier)}
  {
    (identifier)
    (Seq)
  }
]

Q = (array .! (Seq))
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), no `array` places this child first; an `array` begins with `"["`
 --> query.ptk:9:6
  |
9 | Q = (array .! (Seq))
  |      ^^^^^
  |
help: `.!` allows no syntax-tree node in its gap — not even an anonymous token or comment; the soft anchor `.` skips those: `(array . (Seq))`
